--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Craft Chocolate</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -26,11 +26,11 @@ on hover - right: clear; left: 0.8
 	</header>
 	<section class="hero">
 		<div class="beans"></div>
-		<div class="products">
-			<img src="image/choco-1.jpg">
-			<!-- <img src="image/choco-2.jpeg">
-			<img src="image/choco-3.jpg"> -->
-		</div>
+		<ul class="products">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>			
 		<div class="hero-text">beans to bars</div>
 	</section>
 	<footer>
