add the pull down menu

--- a/index.html
+++ b/index.html
@@ -6,21 +6,31 @@
 	<title>Craft Chocolate</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<!-- 
-opacity - left: 0; right: 0.8  
-on hover - right: clear; left: 0.8
--->
 <body>
 	<header>
 		<nav>
 			<ul>
 				<li><a href="">craft choco</a></li>
-				<li><a href="">home</a></li>
 				<li><a href="">shop</a></li>
 				<li><a href="">experience</a></li>
 				<li><a href="">visit</a></li>
-				<li><a href="">about</a></li>
-				<li><a href="">more</a></li>
+				<li><a href="">about</a>
+					<ul>
+						<li><a href="">overview</a></li>
+						<li><a href="">process</a></li>
+						<li><a href="">our beans and sugar</a></li>
+						<li><a href="">contact us</a></li>
+					</ul>
+				</li>
+
+				<li><a href="">more</a>
+					<ul>
+						<li><a href="">retailer</a></li>
+						<li><a href="">wholesale</a></li>
+						<li><a href="">private event</a></li>
+						<li><a href="">jobs</a></li>	
+					</ul>
+				</li>
 			</ul>
 		</nav>		
 	</header>
