add slide show and in sync description

--- a/index.html
+++ b/index.html
@@ -43,6 +43,38 @@
 		</ul>			
 		<div class="hero-text">beans to bars</div>
 	</section>
+
+	<section class="process">
+ 		<h1>beans to bars process</h1>
+ 		<div class="process-container">
+ 			<div class="slide-wrapper"> 
+ 				<ul class="slide-container">
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>										
+				</ul>
+				<a class="prev">&#10094;</a>
+				<a class="next">&#10095;</a> 				
+ 			</div>
+ 			<ol class="description">
+ 				<li><h3>Step 1: Sorting</h3><p>Hand sorting raw cocoa beans to remove poor quality beans</p></li>
+ 				<li><h3>Step 2: Roasting</h3><p>Slow roasting the cocoa beans at low temps to enhance natural flavors</p></li>
+ 				<li><h3>Step 3: Cracking</h3><p>Cracking the roasted beans to get to the cacao nibs ("meat" of the bean) inside; Winnowing away the lighter-weight husk using a vacuum system</p></li>
+ 				<li><h3>step 4: Grinding</h3><p>Slowly grinding the nibs with stone wheels until the pressure and heat turn the nibs into a liquid (100% dark chocolate for those counting)</p></li>
+ 				<li><h3>Step 5: Flavoring</h3><p>Adding sugar and a little cocoa butter (which we press in-house), then continuing to grind until we have smooth, creamy chocolate</p></li>
+ 				<li><h3>Step 6: Conching</h3><p>Conching the liquid chocolate to reduce natural acidity and enhance flavors and texture</p></li>
+ 				<li><h3>Step 7: Tempering</h3><p>Tempering the chocolate (scientific stuff...to properly align the crystals) to lock in a great shine, snap and texture</p></li>
+ 				<li><h3>Step 8: Molding</h3><p>Pour into molds to create truffles and chocolate bars which are then hand wrapped</p></li> 				
+ 			</ol>				 			
+ 		</div>
+ 		
+		
+	</section>
 	<footer>
 		
 	</footer>
