add the text animation and the about page

--- a/shop.html
+++ b/shop.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Craft Chocolate - Home</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Craft Chocolate - Shop</title>
+	<link rel="stylesheet" type="text/css" href="style.css">	
 </head>
 <body>
 	<header>
@@ -34,35 +34,24 @@
 			</ul>
 		</nav>		
 	</header>
-	<section class="hero">
-		<div class="beans"></div>
-		<ul class="products">
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>			
-		<div class="hero-text">beans to bars</div>
+
+	<section>
+		
 	</section>
 
-	
-	<footer>
+	<section>
 		
-	</footer>
+	</section>
+
+
+
+
+
+
 
 	<script>
 		
-		const products = document.querySelector('ul.products');
-		const beans = document.querySelector('div.beans');
-
-		products.addEventListener('mouseover', () => {
-			beans.style.backgroundBlendMode = 'overlay';
-		})
-
-		products.addEventListener('mouseout', () => {
-			beans.style.backgroundBlendMode = 'normal';
-		})
-
-
+		
 
 	</script>
 </body>
