--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<nav>
+		<nav class="lg-screen">
 			<ul>
 				<li><a href="index.html">craft choco</a></li>
 				<li><a href="shop.html">shop</a></li>
