--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
 	<header>
-		<nav>
+		<nav class="sm-screen">			
+			<div class="menu-wrap">
+				<input type="checkbox" class="toggler">
+				<div class="hamburger">
+					<div></div>
+				</div>
+			</div>
+			<a href="index.html">craft choco</a>
+			<div></div>
+		</nav>
+
+		<nav class="lg-screen">
 			<ul>
 				<li><a href="index.html">craft choco</a></li>
 				<li><a href="shop.html">shop</a></li>
