--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 				<div class="hamburger">
 					<div></div>
 				</div>
+				<div class="menu">
+					<ul>
+						<li><a href="">shop</a></li>
+						<li><a href="">experience</a></li>
+						<li><a href="">visit</a></li>
+						<li><a href="">about</a></li>
+						<li><a href="">more</a></li>
+					</ul>
+				</div>
 			</div>
 			<a href="index.html">craft choco</a>
 			<div></div>
