use js to manage the navbar

--- a/index.html
+++ b/index.html
@@ -7,53 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<header>
-		<nav class="sm-screen">			
-			<div class="menu-wrap">
-				<input type="checkbox" class="toggler">
-				<div class="hamburger">
-					<div></div>
-				</div>
-				<div class="menu">
-					<ul>
-						<li><a href="">shop</a></li>
-						<li><a href="">experience</a></li>
-						<li><a href="">visit</a></li>
-						<li><a href="">about</a></li>
-						<li><a href="">more</a></li>
-					</ul>
-				</div>
-			</div>
-			<a href="index.html">craft choco</a>
-			<div></div>
-		</nav>
-
-		<nav class="lg-screen">
-			<ul>
-				<li><a href="index.html">craft choco</a></li>
-				<li><a href="shop.html">shop</a></li>
-				<li><a href="">experience</a></li>
-				<li><a href="">visit</a></li>
-				<li><a href="about.html">about</a>
-					<ul>
-						<li><a href="">overview</a></li>
-						<li><a href="">process</a></li>
-						<li><a href="">our beans and sugar</a></li>
-						<li><a href="">contact us</a></li>
-					</ul>
-				</li>
-
-				<li><a href="">more</a>
-					<ul>
-						<li><a href="">retailer</a></li>
-						<li><a href="">wholesale</a></li>
-						<li><a href="">private event</a></li>
-						<li><a href="">jobs</a></li>	
-					</ul>
-				</li>
-			</ul>
-		</nav>		
-	</header>
+	<header></header>
 	<section class="hero">
 		<div class="beans"></div>
 		<ul class="products">
@@ -69,6 +23,7 @@
 		
 	</footer>
 
+	<script type="text/javascript" src="main.js"></script>
 	<script>
 		
 		const products = document.querySelector('ul.products');
