--- a/about.html
+++ b/about.html
@@ -7,33 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">	
 </head>
 <body>
-	<header>
-		<nav class="lg-screen">
-			<ul>
-				<li><a href="index.html">craft choco</a></li>
-				<li><a href="shop.html">shop</a></li>
-				<li><a href="">experience</a></li>
-				<li><a href="">visit</a></li>
-				<li><a href="about.html">about</a>
-					<ul>
-						<li><a href="">overview</a></li>
-						<li><a href="">process</a></li>
-						<li><a href="">our beans and sugar</a></li>
-						<li><a href="">contact us</a></li>
-					</ul>
-				</li>
-
-				<li><a href="">more</a>
-					<ul>
-						<li><a href="">retailer</a></li>
-						<li><a href="">wholesale</a></li>
-						<li><a href="">private event</a></li>
-						<li><a href="">jobs</a></li>	
-					</ul>
-				</li>
-			</ul>
-		</nav>			
-	</header>
+	<header></header>
 
 	<section class="about">
 		<div class="about-container">
@@ -85,7 +59,7 @@
 
 
 
-
+	<script type="text/javascript" src="main.js"></script>
 	<script>
 
 		const prev = document.querySelector('div.slide-wrapper > a.prev');
@@ -113,9 +87,9 @@
 		})
 
 		function showStep(n) {
-			steps.forEach(step => step.style.display = 'none');
+			steps.forEach(step => step.style.opacity = '0');
 			const index = n - 1;
-			steps[index].style.display = 'block';
+			steps[index].style.opacity = '1';
 }
 	</script>
 </body>
