--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Craft Chocolate - Home</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/navbar.css">
 </head>
 <body>
 	<header></header>
@@ -23,9 +24,8 @@
 		
 	</footer>
 
-	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="script/navbar.js"></script>		
 	<script>
-		
 		const products = document.querySelector('ul.products');
 		const beans = document.querySelector('div.beans');
 
@@ -36,8 +36,6 @@
 		products.addEventListener('mouseout', () => {
 			beans.style.backgroundBlendMode = 'normal';
 		})
-
-
 
 	</script>
 </body>
