add shop page and footer

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 		<div class="hero-text">beans to bars</div>
 	</section>
 
-	
-	<footer>
-		
-	</footer>
+	<footer class="footer"></footer>
 
-	<script type="text/javascript" src="script/navbar.js"></script>		
+	<script type="text/javascript" src="script/navbar.js"></script>
+	<script type="text/javascript" src="script/footer.js"></script>
+	<script src="https://kit.fontawesome.com/93c1bd141c.js" crossorigin="anonymous"></script>				
 	<script>
 		const products = document.querySelector('ul.products');
 		const beans = document.querySelector('div.beans');
