--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 	<section class="about">
 		<div class="about-container">
 			<h1>small batch chocolate</h1>
+			<p>This is a website I build to learn web development. I also dedicate this website to my wife who has a dream to open a chocolate shop after visiting Dandelion Chocolate in San Francisco in United States.  Therefore I have extracted lots of picture and information from the official website of Dandelion Chocolate to which I am obliged to give credit. This website is built as a open source project and is not for any commercial purpose.</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor efficitur lacus semper mollis. In lacinia feugiat maximus. Nam vitae aliquam lectus. In at viverra arcu. In hac habitasse platea dictumst. Nullam convallis, augue quis scelerisque suscipit, lorem purus lacinia magna, id viverra velit ligula eu tellus. Curabitur luctus diam sed sapien placerat venenatis. Aenean fringilla nibh velit, id aliquam ligula sagittis euismod. Pellentesque condimentum quam quis varius condimentum. Aenean faucibus nibh vitae mollis imperdiet.</p>		
 		</div>
 	</section>	
@@ -29,10 +30,11 @@
 					<li></li>
 					<li></li>
 					<li></li>
-					<li></li>										
+					<li></li>						
 				</ul>
 				<a class="prev">&#10094;</a>
-				<a class="next">&#10095;</a> 				
+				<a class="next">&#10095;</a>
+				<p class="source">©Photo and info by Zaks Chocolate</p> 				
  			</div>
  			<ol class="description">
  				<li><h3>Step 1: Sorting</h3><p>Hand sorting raw cocoa beans to remove poor quality beans</p></li>
@@ -47,10 +49,12 @@
 			</div>
 	</section>
 
-	
+	<footer class="footer"></footer>
 
 
-	<script type="text/javascript" src="script/navbar.js"></script>	
+	<script type="text/javascript" src="script/navbar.js"></script>
+	<script type="text/javascript" src="script/footer.js"></script>
+	<script src="https://kit.fontawesome.com/93c1bd141c.js" crossorigin="anonymous"></script>					
 	<script>
 		const prev = document.querySelector('div.slide-wrapper > a.prev');
 		const next = document.querySelector('div.slide-wrapper > a.next');
