--- a/index.html
+++ b/index.html
@@ -8,23 +8,33 @@
 	<link rel="stylesheet" type="text/css" href="css/navbar.css">
 </head>
 <body>
-	<header></header>
-	<section class="hero">
-		<div class="beans"></div>
-		<ul class="products">
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>			
-		<div class="hero-text">beans to bars</div>
+	<section class="loader">
+		<span></span>
+		<span></span>
+		<span></span>
 	</section>
+	<main>
+		<header></header>
+		<section class="hero">
+			<div class="beans"></div>
+			<ul class="products">
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>			
+			<div class="hero-text">beans to bars</div>
+		</section>
 
-	<footer class="footer"></footer>
+		<footer class="footer"></footer>	
+	</main>
+	
 
 	<script type="text/javascript" src="script/navbar.js"></script>
 	<script type="text/javascript" src="script/footer.js"></script>
+	<script type="text/javascript" src="script/loader.js"></script>
 	<script src="https://kit.fontawesome.com/93c1bd141c.js" crossorigin="anonymous"></script>				
 	<script>
+		
 		const products = document.querySelector('ul.products');
 		const beans = document.querySelector('div.beans');
 
@@ -35,7 +45,7 @@
 		products.addEventListener('mouseout', () => {
 			beans.style.backgroundBlendMode = 'normal';
 		})
-
+		
 	</script>
 </body>
 </html>
