--- a/about.html
+++ b/about.html
@@ -8,56 +8,57 @@
 	<link rel="stylesheet" type="text/css" href="css/navbar.css">	
 </head>
 <body>
-	<section class="loader">
-		<span></span>
-		<span></span>
-		<span></span>
-	</section>
-	<main>
-		<header></header>
+	<header></header>
 
-		<section class="about">
-			<div class="about-container">
-				<h1>small batch chocolate</h1>
-				<p>This is a website I build to learn web development. I also dedicate this website to my wife who has a dream to open a chocolate shop after visiting Dandelion Chocolate in San Francisco in United States.  Therefore I have extracted lots of picture and information from the official website of Dandelion Chocolate to which I am obliged to give credit. This website is built as a open source project and is not for any commercial purpose.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor efficitur lacus semper mollis. In lacinia feugiat maximus. Nam vitae aliquam lectus. In at viverra arcu. In hac habitasse platea dictumst. Nullam convallis, augue quis scelerisque suscipit, lorem purus lacinia magna, id viverra velit ligula eu tellus. Curabitur luctus diam sed sapien placerat venenatis. Aenean fringilla nibh velit, id aliquam ligula sagittis euismod. Pellentesque condimentum quam quis varius condimentum. Aenean faucibus nibh vitae mollis imperdiet.</p>		
+	<section class="about">
+		<div class="about-container">
+			<h1>small batch chocolate</h1>
+			<p>This is a website I build to learn web development. I also dedicate this website to my wife who has a dream to open a chocolate shop after visiting Dandelion Chocolate in San Francisco in United States.  Therefore I have extracted lots of picture and information from the official website of Dandelion Chocolate to which I am obliged to give credit. This website is built as a open source project and is not for any commercial purpose.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor efficitur lacus semper mollis. In lacinia feugiat maximus. Nam vitae aliquam lectus. In at viverra arcu. In hac habitasse platea dictumst. Nullam convallis, augue quis scelerisque suscipit, lorem purus lacinia magna, id viverra velit ligula eu tellus. Curabitur luctus diam sed sapien placerat venenatis. Aenean fringilla nibh velit, id aliquam ligula sagittis euismod. Pellentesque condimentum quam quis varius condimentum. Aenean faucibus nibh vitae mollis imperdiet.</p>		
+		</div>
+	</section>	
+	
+	<section class="process">
+		<h1>beans to bars process</h1>
+		<div class="process-container">
+ 			<div class="slide-wrapper"> 
+ 				<ul class="slide-container">
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>						
+				</ul>
+				<a class="prev">&#10094;</a>
+				<a class="next">&#10095;</a>
+				<p class="source">©Photo and info by Zaks Chocolate</p> 				
+ 			</div>
+ 			<ol class="description">
+ 				<li><h3>Step 1: Sorting</h3><p>Hand sorting raw cocoa beans to remove poor quality beans</p></li>
+ 				<li><h3>Step 2: Roasting</h3><p>Slow roasting the cocoa beans at low temps to enhance natural flavors</p></li>
+ 				<li><h3>Step 3: Cracking</h3><p>Cracking the roasted beans to get to the cacao nibs ("meat" of the bean) inside; Winnowing away the lighter-weight husk using a vacuum system</p></li>
+ 				<li><h3>Step 4: Grinding</h3><p>Slowly grinding the nibs with stone wheels until the pressure and heat turn the nibs into a liquid (100% dark chocolate for those counting)</p></li>
+ 				<li><h3>Step 5: Flavoring</h3><p>Adding sugar and a little cocoa butter (which we press in-house), then continuing to grind until we have smooth, creamy chocolate</p></li>
+ 				<li><h3>Step 6: Conching</h3><p>Conching the liquid chocolate to reduce natural acidity and enhance flavors and texture</p></li>
+ 				<li><h3>Step 7: Tempering</h3><p>Tempering the chocolate (scientific stuff...to properly align the crystals) to lock in a great shine, snap and texture</p></li>
+ 				<li><h3>Step 8: Molding</h3><p>Pour into molds to create truffles and chocolate bars which are then hand wrapped</p></li> 				
+ 			</ol>				 			
 			</div>
-		</section>	
-		
-		<section class="process">
-			<h1>beans to bars process</h1>
-			<div class="process-container">
-	 			<div class="slide-wrapper"> 
-	 				<ul class="slide-container">
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>						
-					</ul>
-					<a class="prev">&#10094;</a>
-					<a class="next">&#10095;</a>
-					<p class="source">©Photo and info by Zaks Chocolate</p> 				
-	 			</div>
-	 			<ol class="description">
-	 				<li><h3>Step 1: Sorting</h3><p>Hand sorting raw cocoa beans to remove poor quality beans</p></li>
-	 				<li><h3>Step 2: Roasting</h3><p>Slow roasting the cocoa beans at low temps to enhance natural flavors</p></li>
-	 				<li><h3>Step 3: Cracking</h3><p>Cracking the roasted beans to get to the cacao nibs ("meat" of the bean) inside; Winnowing away the lighter-weight husk using a vacuum system</p></li>
-	 				<li><h3>Step 4: Grinding</h3><p>Slowly grinding the nibs with stone wheels until the pressure and heat turn the nibs into a liquid (100% dark chocolate for those counting)</p></li>
-	 				<li><h3>Step 5: Flavoring</h3><p>Adding sugar and a little cocoa butter (which we press in-house), then continuing to grind until we have smooth, creamy chocolate</p></li>
-	 				<li><h3>Step 6: Conching</h3><p>Conching the liquid chocolate to reduce natural acidity and enhance flavors and texture</p></li>
-	 				<li><h3>Step 7: Tempering</h3><p>Tempering the chocolate (scientific stuff...to properly align the crystals) to lock in a great shine, snap and texture</p></li>
-	 				<li><h3>Step 8: Molding</h3><p>Pour into molds to create truffles and chocolate bars which are then hand wrapped</p></li> 				
-	 			</ol>				 			
-				</div>
-		</section>
+	</section>
 
-		<footer class="footer"></footer>
+	<footer class="footer"></footer>
+	<div class="loader-wrapper">
+		<div class="loader">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+	</div>
 			
-	</main>
+	
 	
 
 
