--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
 	<link rel="stylesheet" type="text/css" href="css/navbar.css">
 </head>
 <body>
-	<section class="loader">
-		<span></span>
-		<span></span>
-		<span></span>
+	<header></header>
+	<section class="hero">
+		<div class="beans"></div>
+		<ul class="products">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>			
+		<div class="hero-text">Bean to Bar</div>
 	</section>
-	<main>
-		<header></header>
-		<section class="hero">
-			<div class="beans"></div>
-			<ul class="products">
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>			
-			<div class="hero-text">beans to bars</div>
-		</section>
 
-		<footer class="footer"></footer>	
-	</main>
+	<footer class="footer"></footer>	
 	
+	<div class="loader-wrapper">
+		<div class="loader">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+	</div>
+		
+		
 
 	<script type="text/javascript" src="script/navbar.js"></script>
 	<script type="text/javascript" src="script/footer.js"></script>
