--- a/experience.html
+++ b/experience.html
@@ -7,55 +7,58 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/navbar.css">	
 </head>
-<body>
-	<section class="loader">
-		<span></span>
-		<span></span>
-		<span></span>
+<body>	
+	
+	<header></header>
+	<section class="experience">
+		<div class="container">
+			<div class="image image1"></div>
+			<h1>factory tour</h1>
+			<div class="description">
+				<p>Walk through an active chocolate factory and learn our complete production process from cacao bean to finished chocolate bar.</p>
+				<p class="price">US$15</p>	
+			</div>			
+		</div>
+
+		 <div class="container">
+			<div class="image image2"></div>
+			<h1>tasting class</h1>
+			<div class="description">
+				<p>A short introduction to tasting chocolate—the techniques, the flavors, and the vocabulary to describe what you find.</p>
+				<p class="price">US$35</p>	
+			</div>			
+		</div>
+
+		<div class="container">
+			<div class="image image3"></div>
+			<h1>sourcing</h1>
+			<div class="description">
+				<p>Learn our philosophy and practice of sourcing cacao and cocoa beans from around the equator.</p>
+				<p class="price">US$35</p>	
+			</div>			
+		</div>
+
+		<div class="container">
+			<div class="image image4"></div>
+			<h1>bean to bar</h1>
+			<div class="description">
+				<p>Through demo and some hands-on, we walk you through the chocolate making process, and you leave with wrapped, finished bars.</p>
+				<p class="price">US$100</p>	
+			</div>			
+		</div>
+
 	</section>
-	<main>
-		<header></header>
-		<section class="experience">
-			<div class="container">
-				<div class="image image1"></div>
-				<h1>factory tour</h1>
-				<div class="description">
-					<p>Walk through an active chocolate factory and learn our complete production process from cacao bean to finished chocolate bar.</p>
-					<p class="price">US$15</p>	
-				</div>			
-			</div>
 
-			 <div class="container">
-				<div class="image image2"></div>
-				<h1>tasting class</h1>
-				<div class="description">
-					<p>A short introduction to tasting chocolate—the techniques, the flavors, and the vocabulary to describe what you find.</p>
-					<p class="price">US$35</p>	
-				</div>			
-			</div>
+	<footer class="footer"></footer>
 
-			<div class="container">
-				<div class="image image3"></div>
-				<h1>sourcing</h1>
-				<div class="description">
-					<p>Learn our philosophy and practice of sourcing cacao and cocoa beans from around the equator.</p>
-					<p class="price">US$35</p>	
-				</div>			
-			</div>
+	<div class="loader-wrapper">
+		<div class="loader">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+	</div>
 
-			<div class="container">
-				<div class="image image4"></div>
-				<h1>bean to bar</h1>
-				<div class="description">
-					<p>Through demo and some hands-on, we walk you through the chocolate making process, and you leave with wrapped, finished bars.</p>
-					<p class="price">US$100</p>	
-				</div>			
-			</div>
-
-		</section>
-
-		<footer class="footer"></footer>	
-	</main>
 	
 
 	<script type="text/javascript" src="script/navbar.js"></script>
