--- a/shop.html
+++ b/shop.html
@@ -19,23 +19,13 @@
 	<section class="treat">
 		<h1>treats</h1>
 		<p>Made with Dandelion Chocolate, these confections are a collaboration with some of San Francisco's finest makers.</p>
-		<div class="treat-container">				
-			<div class="product" data-aos="zoom-in">
-				<div class="image-container">
-					<img class="image-1" src="https://cdn.shopify.com/s/files/1/2434/0841/products/Sea_Salt_Caramels_-_Feve_-_2018.05_0_5x_1080x.png?v=1579115582">
-					<img class="image-2" src="https://cdn.shopify.com/s/files/1/2434/0841/products/feve-collaborator-sea-salt-caramels-14067851198604_1080x.png?v=1579115582">	
-				</div>
-				<h3>sea salt caramels</h3>
-				<p class="detail">vanilla bean caramel with handpicked Fleur De Sel</p>
-				<p class="price">$35</p>
-			</div>
-		</div>			
+		<div class="treat-container"></div>			
 	</section>
-	<footer class="footer"></footer>	
+	<footer class="footer"></footer>
 
 	<script type="text/javascript" src="script/navbar.js"></script>
 	<script type="text/javascript" src="script/footer.js"></script>	
-	<script type="text/javascript" src="script/shop.js"></script>
+	<script type="text/javascript" src="script/shop.js"></script>	
 	<script src="https://kit.fontawesome.com/93c1bd141c.js" crossorigin="anonymous"></script>		
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
